# games101

./: README.md
Assignment1/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: Renderer.cpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
